[tool.poetry]
name = "teampulls"
version = "0.2.6"
description = "teampulls lists all of the pull requests for a list of users and repositories and highlights the old ones in red."
authors = ["Jochen Breuer <brejoc@gmail.com>"]
license = "GPLv3"
keywords = ["Github", "Pull Requests", "PR", "team"]
packages = [{include = "teampulls"}]
repository = "https://github.com/brejoc/teampulls"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
requests = "^2.28.1"
python-dateutil = "^2.8.2"
docopt = "^0.6.2"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
teampulls = "teampulls.teampulls:main"